--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/theme.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/custom.css" rel="stylesheet" type="text/css" media="all"/>
-    	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700%7CLibre+Baskerville:400,400italic' rel='stylesheet' type='text/css'>
+    	<link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700%7CLibre+Baskerville:400,400italic' rel='stylesheet' type='text/css'>
     </head>
     <body>
 
@@ -310,8 +310,8 @@
 		
 				
         <script src="js/jquery.min.js"></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/plugins/ScrollToPlugin.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/plugins/ScrollToPlugin.min.js"></script>
         <script src="js/smooth-scroll.min.js"></script>
         <script src="js/placeholders.min.js"></script>
         <script src="js/flexslider.min.js"></script>
