--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					<div class="row">
 						<div class="col-sm-12 text-center">
 							<h2>Ceremony &amp; Reception</h2>
-							<p>Join us for a unique ceremony followed by hours of revelry</p>
+							<!-- <p>Join us for a unique ceremony followed by hours of revelry</p> -->
 							<p>
 								<strong>Enchanted Meadow</strong><br>
 								5:30pm - Late<br>
@@ -86,7 +86,7 @@
 							<div class="image-slider">
 								<ul class="slides">
 									<li>
-										<img alt="Photo" src="img/small-slider-frodo.jpg">
+										<img alt="Photo" src="img/small-slider-winery.jpg">
 									</li>
 								
 									<li>
@@ -253,7 +253,7 @@
 						<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 text-center">
 							<h2>No Gifts Please</h2>
 							<p>
-								We are very fortunate, and have everything we will ever need, plus a lot more in the attic. &nbsp;<strong>Seriously.</strong>&nbsp; Serving platters, decorative vases, and "Mr and Mrs" throw pillows will be mailed back to you.  
+								We are very fortunate, and have everything we will ever need, plus a lot more in the attic. &nbsp;<strong>Seriously.</strong>&nbsp; Serving platters, decorative vases, and "Mr and Mrs" throw pillows will be mailed back.  
 							</p>
 							<p>
 								<em>If you feel the need, please donate to one of the charities below. </em>
@@ -264,10 +264,13 @@
 					<div class="row">
 						<div class="col-sm-12 text-center">
 							<a href="http://www.rivannatrails.org/page-929875" target="_blank">
-								<img alt="Registry" src="img/RTF_Logo_Green_Round.png">
+								<img src="img/RTF_Logo_Green_Round.png">
 							</a>
-							<a href="https://secure.virginiapublicmedia.org/index.php?formid=1&src=WP1703&res=WEB" target="_blank">
-								<img alt="Registry" src="img/logo_fid.jpg">
+							<a href="https://donate.appalachiantrail.org/default.aspx?tsid=7638" target="_blank">
+								<img src="img/appalachiantrail_logo.png">
+							</a>
+							<a href="https://www.nps.gov/getinvolved/donate.htm" target="_blank">
+								<img src="img/nps_logo.png">
 							</a>
 						</div>
 					</div>
