Edited Gift Text
Changed gift text to be less aggressive.

--- a/index.html
+++ b/index.html
@@ -253,10 +253,10 @@
 						<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 text-center">
 							<h2>No Gifts Please</h2>
 							<p>
-								We are very fortunate, and have everything we will ever need, plus a lot more in the attic. &nbsp;<strong>Seriously.</strong>&nbsp; Serving platters, decorative vases, and "Mr and Mrs" throw pillows will be mailed back.  
+								We are very fortunate to have everything we will ever need, plus a lot more in the attic. &nbsp; The trip you make to our wedding, however long or short, is the best possible gift we could receive.
 							</p>
 							<p>
-								<em>If you feel the need, please donate to one of the charities below. </em>
+								<em>If you must get us something, please make a donation in our name to one of the charities below.</em>
 							</p>
 						</div>
 					</div>
