--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<a id="home" class="in-page-link"></a>
 
 				<div class="background-image-holder">
-					<img alt="Background image" class="background-image" src="img/hero-water.jpg">
+					<img alt="Background image" class="background-image" src="img/hero-card.jpg">
 				</div>
 			
 				<div class="container">
