--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
 			ga('send', 'pageview');
 
 
+			$(window).load(function(){
 				$('.grid').masonry({
 				  // options
 				  itemSelector: '.grid-item',
